fix: add correct horizontal scroll for long code blocks

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -9,6 +9,7 @@
   flex-grow: 1;
   display: flex;
   flex-flow: column nowrap;
+  overflow: auto;
 }
 
 .documentwrapper {
